--- a/test/fixtures/admins.yml
+++ b/test/fixtures/admins.yml
@@ -1,9 +1,9 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
-one:
-  Student: MyString
-  Instructor: MyString
-
-two:
-  Student: MyString
-  Instructor: MyString
+#one:
+#  Student: MyString
+#  Instructor: MyString
+#
+#two:
+#  Student: MyString
+#  Instructor: MyString
