--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -4,8 +4,11 @@
 # model remove the '{}' from the fixture names and add the columns immediately
 # below each fixture, per the syntax in the comments below
 #
-one: {}
+one:
+  name: 'test'
+  email: 'test'
+  password_digest: <%= BCrypt::Password.create('password') %>
 # column: value
 #
-two: {}
+#two: {}
 #  column: value
